WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
REOPENED
264933
[GTK][WPE][Debug] ASSERT triggered by fast/mediastream/image-capture-take-photo.html
https://bugs.webkit.org/show_bug.cgi?id=264933
Summary
[GTK][WPE][Debug] ASSERT triggered by fast/mediastream/image-capture-take-pho...
Philippe Normand
Reported
2023-11-16 03:03:27 PST
Thread 1 (Thread 0x7f82af7fe640 (LWP 97497)): #0 WTFCrash() () at /app/webkit/Source/WTF/wtf/Assertions.cpp:333 #1 0x00007f8639836c91 in WTFCrashWithInfo(int, char const*, char const*, int) () at /app/webkit/WebKitBuild/WPE/Debug/WTF/Headers/wtf/Assertions.h:778 #2 0x00007f8641d34e53 in WebCore::encodeImage(cairo_surface_t*, WTF::String const&, WTF::Vector<unsigned char, 0, WTF::CrashOnOverflow, 16, WTF::FastMalloc>*) (image=0x7f8318008e80, mimeType=..., output=0x7f82af7fd600) at /app/webkit/Source/WebCore/platform/graphics/cairo/ImageBufferUtilitiesCairo.cpp:63 #3 0x00007f8641d34ed1 in WebCore::encodeData(_cairo_surface*, WTF::String const&, std::optional<double>) (image=0x7f8318008e80, mimeType=...) at /app/webkit/Source/WebCore/platform/graphics/cairo/ImageBufferUtilitiesCairo.cpp:71 #4 0x00007f8641c5b8c2 in WebCore::ImageBuffer::toData(WTF::Ref<WebCore::ImageBuffer, WTF::RawPtrTraits<WebCore::ImageBuffer> >, WTF::String const&, std::optional<double>, WebCore::PreserveResolution) (source=..., mimeType=..., quality=std::optional<double> [no contained value], preserveResolution=WebCore::PreserveResolution::No) at /app/webkit/Source/WebCore/platform/graphics/ImageBuffer.cpp:425 #5 0x00007f8641fe4451 in operator()() (__closure=0x7f861e0a2368) at /app/webkit/Source/WebCore/platform/mock/MockRealtimeVideoSource.cpp:255 #6 0x00007f8641fe4597 in operator()() (__closure=0x7f861e0a2348) at /app/webkit/WebKitBuild/WPE/Debug/WTF/Headers/wtf/NativePromise.h:1359 #7 0x00007f8641fea152 in WTF::Detail::CallableWrapper<WTF::invokeAsync<WebCore::MockRealtimeVideoSource::takePhotoInternal(WebCore::PhotoSettings&&)::<lambda()> >(SerialFunctionDispatcher&, WebCore::MockRealtimeVideoSource::takePhotoInternal(WebCore::PhotoSettings&&)::<lambda()>&&, const Logger::LogSiteIdentifier&)::<lambda()>, void>::call(void) (this=0x7f861e0a2340) at /app/webkit/WebKitBuild/WPE/Debug/WTF/Headers/wtf/Function.h:53 #8 0x00007f863a1b8c41 in WTF::Function<void ()>::operator()() const (this=0x7f82af7fd850) at /app/webkit/WebKitBuild/WPE/Debug/WTF/Headers/wtf/Function.h:82 #9 0x00007f863d60e837 in WTF::RunLoop::performWork() (this=0x7f861e118300) at /app/webkit/Source/WTF/wtf/RunLoop.cpp:147 #10 0x00007f863d6c2972 in operator()(gpointer) const (__closure=0x0, userData=0x7f861e118300) at /app/webkit/Source/WTF/wtf/glib/RunLoopGLib.cpp:80 #11 0x00007f863d6c2996 in _FUN(gpointer) () at /app/webkit/Source/WTF/wtf/glib/RunLoopGLib.cpp:82 #12 0x00007f863d6c2905 in operator()(GSource*, GSourceFunc, gpointer) const (__closure=0x0, source=0x7f83180011d0, callback=0x7f863d6c2979 <_FUN(gpointer)>, userData=0x7f861e118300) at /app/webkit/Source/WTF/wtf/glib/RunLoopGLib.cpp:53 #13 0x00007f863d6c2953 in _FUN(GSource*, GSourceFunc, gpointer) () at /app/webkit/Source/WTF/wtf/glib/RunLoopGLib.cpp:56 #14 0x00007f862edbe527 in g_main_dispatch (context=0x7f8318000b90) at ../glib/gmain.c:3460 #15 g_main_context_dispatch (context=0x7f8318000b90) at ../glib/gmain.c:4200 #16 0x00007f862ee1b888 in g_main_context_iterate.constprop.0 (context=0x7f8318000b90, block=<optimized out>, dispatch=1, self=<optimized out>) at ../glib/gmain.c:4276 #17 0x00007f862edbdd7f in g_main_loop_run (loop=0x7f8318000fc0) at ../glib/gmain.c:4479 #18 0x00007f863d6c2fc6 in WTF::RunLoop::run() () at /app/webkit/Source/WTF/wtf/glib/RunLoopGLib.cpp:108 #19 0x00007f863d60e5cb in operator()() const (__closure=0x7f861e190dc8) at /app/webkit/Source/WTF/wtf/RunLoop.cpp:114 #20 0x00007f863d60fcd8 in WTF::Detail::CallableWrapper<WTF::RunLoop::create(char const*, WTF::ThreadType, WTF::Thread::QOS)::<lambda()>, void>::call(void) (this=0x7f861e190dc0) at /app/webkit/Source/WTF/wtf/Function.h:53 #21 0x00007f863a1b8c41 in WTF::Function<void ()>::operator()() const (this=0x7f82af7fdb50) at /app/webkit/WebKitBuild/WPE/Debug/WTF/Headers/wtf/Function.h:82 #22 0x00007f863d61852d in WTF::Thread::entryPoint(WTF::Thread::NewThreadContext*) (newThreadContext=0x7f861e34be70) at /app/webkit/Source/WTF/wtf/Threading.cpp:258 #23 0x00007f863d6d0d87 in WTF::wtfThreadEntryPoint(void*) (context=0x7f861e34be70) at /app/webkit/Source/WTF/wtf/posix/ThreadingPOSIX.cpp:243 #24 0x00007f862e63b25a in start_thread (arg=<optimized out>) at pthread_create.c:442 #25 0x00007f862e6c3fc4 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:100
Attachments
Add attachment
proposed patch, testcase, etc.
Vitaly Dyackhov
Comment 1
2023-11-17 02:00:58 PST
Pull request:
https://github.com/WebKit/WebKit/pull/20658
EWS
Comment 2
2023-11-20 01:35:15 PST
Committed
270967@main
(d6decd31fc74): <
https://commits.webkit.org/270967@main
> Reviewed commits have been landed. Closing PR #20658 and removing active labels.
Philippe Normand
Comment 3
2024-01-30 03:29:53 PST
Still flaky crash/fail. Thread 1 (Thread 0x7f202cffd6c0 (LWP 133680)): #0 WTFCrash() () at /app/webkit/Source/WTF/wtf/Assertions.cpp:333 #1 0x00007f23e1ebabf6 in WTFCrashWithInfo(int, char const*, char const*, int) () at /app/webkit/WebKitBuild/GTK/Debug/WTF/Headers/wtf/Assertions.h:778 #2 0x00007f23e8590116 in WebCore::MockRealtimeVideoSource::generatePhoto() (this=0x7f237a0bbc00) at /app/webkit/Source/WebCore/platform/mock/MockRealtimeVideoSource.cpp:608 #3 0x00007f23e858c4e1 in operator()() (__closure=0x7f23c24f20a8) at /app/webkit/Source/WebCore/platform/mock/MockRealtimeVideoSource.cpp:254 #4 0x00007f23e858c6f1 in operator()() (__closure=0x7f23c24f2088) at /app/webkit/WebKitBuild/GTK/Debug/WTF/Headers/wtf/NativePromise.h:1442 #5 0x00007f23e8592428 in WTF::Detail::CallableWrapper<WTF::invokeAsync<WebCore::MockRealtimeVideoSource::takePhotoInternal(WebCore::PhotoSettings&&)::<lambda()> >(SerialFunctionDispatcher&, WebCore::MockRealtimeVideoSource::takePhotoInternal(WebCore::PhotoSettings&&)::<lambda()>&&, const Logger::LogSiteIdentifier&)::<lambda()>, void>::call(void) (this=0x7f23c24f2080) at /app/webkit/WebKitBuild/GTK/Debug/WTF/Headers/wtf/Function.h:53 #6 0x00007f23d61bed45 in WTF::Function<void ()>::operator()() const (this=0x7f202cffc880) at /app/webkit/WebKitBuild/GTK/Debug/WTF/Headers/wtf/Function.h:82 #7 0x00007f23d78bb70b in WTF::RunLoop::performWork() (this=0x7f23c22e00c0) at /app/webkit/Source/WTF/wtf/RunLoop.cpp:147 #8 0x00007f23d797844e in operator()(gpointer) const (__closure=0x0, userData=0x7f23c22e00c0) at /app/webkit/Source/WTF/wtf/glib/RunLoopGLib.cpp:80 #9 0x00007f23d7978472 in _FUN(gpointer) () at /app/webkit/Source/WTF/wtf/glib/RunLoopGLib.cpp:82 #10 0x00007f23d79783e1 in operator()(GSource*, GSourceFunc, gpointer) const (__closure=0x0, source=0x7f20240208b0, callback=0x7f23d7978455 <_FUN(gpointer)>, userData=0x7f23c22e00c0) at /app/webkit/Source/WTF/wtf/glib/RunLoopGLib.cpp:53 #11 0x00007f23d797842f in _FUN(GSource*, GSourceFunc, gpointer) () at /app/webkit/Source/WTF/wtf/glib/RunLoopGLib.cpp:56 #12 0x00007f23d0917d36 in g_main_dispatch (context=0x7f2024000b70) at ../glib/gmain.c:3460 #13 g_main_context_dispatch (context=0x7f2024000b70) at ../glib/gmain.c:4200 #14 0x00007f23d09752b8 in g_main_context_iterate.isra.0 (context=0x7f2024000b70, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at ../glib/gmain.c:4276 #15 0x00007f23d09173ff in g_main_loop_run (loop=0x7f2024022cd0) at ../glib/gmain.c:4479 #16 0x00007f23d7978aa2 in WTF::RunLoop::run() () at /app/webkit/Source/WTF/wtf/glib/RunLoopGLib.cpp:108 #17 0x00007f23d78bb49f in operator()() const (__closure=0x7f23c272a688) at /app/webkit/Source/WTF/wtf/RunLoop.cpp:114 #18 0x00007f23d78bcbac in WTF::Detail::CallableWrapper<WTF::RunLoop::create(char const*, WTF::ThreadType, WTF::Thread::QOS)::<lambda()>, void>::call(void) (this=0x7f23c272a680) at /app/webkit/Source/WTF/wtf/Function.h:53 #19 0x00007f23d61bed45 in WTF::Function<void ()>::operator()() const (this=0x7f202cffcb80) at /app/webkit/WebKitBuild/GTK/Debug/WTF/Headers/wtf/Function.h:82 #20 0x00007f23d78c7d59 in WTF::Thread::entryPoint(WTF::Thread::NewThreadContext*) (newThreadContext=0x7f23c22b6110) at /app/webkit/Source/WTF/wtf/Threading.cpp:258 #21 0x00007f23d79866af in WTF::wtfThreadEntryPoint(void*) (context=0x7f23c22b6110) at /app/webkit/Source/WTF/wtf/posix/ThreadingPOSIX.cpp:247 #22 0x00007f23d03b8e39 in start_thread (arg=<optimized out>) at pthread_create.c:444 #23 0x00007f23d04408c4 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:100
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug