[Cairo][Debug] ASSERT triggered by fast/mediastream/image-capture-take-photo.html https://bugs.webkit.org/show_bug.cgi?id=264933

Reviewed by Eric Carlson.

`MockRealtimeVideoSource` attempts to encode the image buffer of the
generated photo into `image/jpeg` data. However, the WPE port only
supports `image/png` encoding.

* Source/WebCore/platform/mock/MockRealtimeVideoSource.cpp:
(WebCore::MockRealtimeVideoSource::takePhotoInternal):

Canonical link: https://commits.webkit.org/270967@main